--- a/ros2_ws/src/actions_cpp/package.xml
+++ b/ros2_ws/src/actions_cpp/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>actions_cpp</name>
-  <version>0.1.0</version>
+  <version>0.1.1</version>
   <description>TODO: Package description</description>
   <maintainer email="daegan@todo.todo">daegan</maintainer>
   <license>TODO: License declaration</license>
@@ -12,7 +12,7 @@
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>rclcpp_action</depend>
-  <depend>my_robot_interfaces</depend>
+  <depend>astra_auto_interfaces</depend>
   
 
   <test_depend>ament_lint_auto</test_depend>
