--- a/ros2_ws/src/astra_auto_interfaces/CMakeLists.txt
+++ b/ros2_ws/src/astra_auto_interfaces/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(astra_auto_interfaces)
+project(astra_auto_interfaces VERSION 1.1)
 
 #if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 #  add_compile_options(-Wall -Wextra -Wpedantic)
