--- a/ros2_ws/src/actions_cpp/CMakeLists.txt
+++ b/ros2_ws/src/actions_cpp/CMakeLists.txt
@@ -11,6 +11,10 @@ find_package(rclcpp REQUIRED)
 find_package(rclcpp_action REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(astra_auto_interfaces REQUIRED)
+find_package( OpenCV REQUIRED )
+
+
+include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 add_executable(count_until_server src/count_until_server.cpp)
 ament_target_dependencies(count_until_server rclcpp rclcpp_action astra_auto_interfaces)
@@ -20,10 +24,12 @@ ament_target_dependencies(count_until_client rclcpp rclcpp_action astra_auto_int
 
 add_executable(navigate_rover_server src/astra_auto_server.cpp)
 ament_target_dependencies(navigate_rover_server rclcpp rclcpp_action std_msgs astra_auto_interfaces)
-
+target_link_libraries( navigate_rover_server ${OpenCV_LIBS} )
 
 add_executable(navigate_rover_client src/astra_auto_client.cpp)
 ament_target_dependencies(navigate_rover_client rclcpp rclcpp_action astra_auto_interfaces)
+
+
 
 
 
