--- a/ros2_ws/src/actions_cpp/package.xml
+++ b/ros2_ws/src/actions_cpp/package.xml
@@ -9,7 +9,7 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <build_depend>opencv2</build_depend>
-  <run_depend></run_depend>
+  <run_depend>opencv2</run_depend>
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>rclcpp_action</depend>
