edited CMake include

--- a/ros2_ws/src/actions_cpp/CMakeLists.txt
+++ b/ros2_ws/src/actions_cpp/CMakeLists.txt
@@ -44,6 +44,7 @@ install(TARGETS
   count_until_client
   navigate_rover_server
   navigate_rover_client
+  DIRECTORY lib/ 
   DESTINATION lib/${PROJECT_NAME}/
 )
 
