improvement of last push

--- a/ros2_ws/src/actions_cpp/CMakeLists.txt
+++ b/ros2_ws/src/actions_cpp/CMakeLists.txt
@@ -47,8 +47,8 @@ install(TARGETS
   DESTINATION lib/${PROJECT_NAME}/
 )
 install ( 
-  DIRECTORY lib/
-  DESTINATION lib 
+  DIRECTORY ${OpenCV_INCLUDE_DIRS}
+  DESTINATION lib/
 )
 
 ament_package()
