--- a/ros2_ws/src/actions_cpp/CMakeLists.txt
+++ b/ros2_ws/src/actions_cpp/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(sensor_msgs REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(image_transport REQUIRED)
 find_package(astra_auto_interfaces REQUIRED)
+find_package(realsense2_camera REQUIRED)
 
 find_package( OpenCV REQUIRED )
 
@@ -29,13 +30,20 @@ target_link_libraries( navigate_rover_server ${OpenCV_LIBS} opencv_highgui)
 add_executable(navigate_rover_client src/astra_auto_client.cpp)
 ament_target_dependencies(navigate_rover_client rclcpp rclcpp_action astra_auto_interfaces)
 
+add_executable(depth_handler src/depth_handler.cpp)
+ament_target_dependencies(depth_handler std_msgs astra_auto_interfaces rclcpp rclcpp_action)
 
+add_executable(aruco_detect src/aruco.cpp)
+ament_target_dependencies(aruco_detect std_msgs rclcpp astra_auto_interfaces )
+target_link_libraries(aruco_detect ${OpenCV_LIBS} opencv_highgui)
 
 
 
 install(TARGETS 
   navigate_rover_server
   navigate_rover_client
+  depth_handler
+  aruco_detect
   DESTINATION lib/${PROJECT_NAME}/
 )
 install ( 
