--- a/ros2_ws/src/clucky_auto_bringup/package.xml
+++ b/ros2_ws/src/clucky_auto_bringup/package.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>actions_cpp</name>
-  <version>0.1.1</version>
+  <name>clucky_auto_bringup</name>
+  <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="daegan@todo.todo">daegan</maintainer>
+  <maintainer email="ozy@todo.todo">ozy</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  
-  <depend>rclcpp</depend>
-  <depend>std_msgs</depend>
-  <depend>rclcpp_action</depend>
-  <depend>astra_auto_interfaces</depend>
-  <depend>image_transport</depend>
-  <depend>realsense2_camera</depend>
+
+  <exec_depend>actions_cpp</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
