--- a/auto_ws/.vscode/settings.json
+++ b/auto_ws/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
     "python.autoComplete.extraPaths": [
-        "/home/ozy/rover-Autonomy/auto_ws/install/clucky_interfaces/local/lib/python3.10/dist-packages",
-        "/home/ozy/rover-Autonomy/auto_ws/install/astra_auto_interfaces/local/lib/python3.10/dist-packages",
+        "~/rover-Autonomy/auto_ws/install/clucky_interfaces/local/lib/python3.10/dist-packages",
+        "~/rover-Autonomy/auto_ws/install/astra_auto_interfaces/local/lib/python3.10/dist-packages",
         "/opt/ros/humble/lib/python3.10/site-packages",
         "/opt/ros/humble/local/lib/python3.10/dist-packages"
     ],
     "python.analysis.extraPaths": [
-        "/home/ozy/rover-Autonomy/auto_ws/install/clucky_interfaces/local/lib/python3.10/dist-packages",
-        "/home/ozy/rover-Autonomy/auto_ws/install/astra_auto_interfaces/local/lib/python3.10/dist-packages",
+        "~/rover-Autonomy/auto_ws/install/clucky_interfaces/local/lib/python3.10/dist-packages",
+        "~/rover-Autonomy/auto_ws/install/astra_auto_interfaces/local/lib/python3.10/dist-packages",
         "/opt/ros/humble/lib/python3.10/site-packages",
         "/opt/ros/humble/local/lib/python3.10/dist-packages"
     ]
