--- a/auto_ws/src/auto_pkg/package.xml
+++ b/auto_ws/src/auto_pkg/package.xml
@@ -14,9 +14,14 @@
   <depend>rclpy</depend>
   <depend>clucky_interfaces</depend>
   <depend>rclcpp_action</depend>
+  <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+
+  <exec_depend>cv_bridge</exec_depend>
+  <exec_depend>opencv-python</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
